<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/all_bg_color"
    tools:context="com.szfp.scan.AddInvActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/all_bg_color"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <LinearLayout
                android:padding="@dimen/length_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:ems="7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_name"/>

                <EditText
                    android:id="@+id/et_shop_name"
                    android:layout_marginLeft="@dimen/length_10"
                    android:background="@drawable/et_bg"
                    android:padding="@dimen/length_10"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:padding="@dimen/length_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:ems="7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_sn"/>

                <EditText
                    android:id="@+id/et_shop_sn"
                    android:layout_marginLeft="@dimen/length_10"
                    android:background="@drawable/et_bg"
                    android:padding="@dimen/length_10"
                    android:maxLength="25"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:padding="@dimen/length_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:ems="7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num"/>

                <EditText
                    android:id="@+id/et_quantity"
                    android:layout_marginLeft="@dimen/length_10"
                    android:background="@drawable/et_bg"
                    android:padding="@dimen/length_10"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:padding="@dimen/length_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:ems="7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"/>

                <EditText
                    android:id="@+id/et_price"
                    android:layout_marginLeft="@dimen/length_10"
                    android:background="@drawable/et_bg"
                    android:padding="@dimen/length_10"
                    android:maxLength="20"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>




            <Button
                android:id="@+id/btn_new"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:background="@drawable/bt_button_bg"
                android:text="@string/create_new_shop"
                android:textColor="@color/white"
                android:textSize="18dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
